--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ importFrom(R6,is.R6)
 importFrom(R6,is.R6Class)
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,setRcppClass)
-importFrom(maybe,from_just)
+importFrom(maybe,from_maybe)
 importFrom(maybe,just)
 importFrom(maybe,nothing)
 importFrom(methods,new)
